--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,15 +10,21 @@
     "axios": "^0.26.1",
     "element-plus": "^2.1.11",
     "element-resize-detector": "^1.2.4",
+    "mitt": "^3.0.0",
     "pinia": "^2.0.26",
     "qs": "^6.11.0",
-    "valtio": "^1.8.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@charrue/vitest-service": "^0.0.2",
     "@effective/shared": "workspace:*",
     "@types/element-resize-detector": "^1.1.3",
-    "@types/qs": "^6.9.7"
+    "@types/qs": "^6.9.7",
+    "jsdom": "^20.0.3",
+    "vitest": "^0.26.3"
+  },
+  "scripts": {
+    "test": "vitest"
   }
 }
