--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "scripts": {
     "build": "vite build",
-    "build:node": "pnpm --filter=@effective/node run build",
-    "app": "pnpm --filter=@effective/app run dev",
+    "build:node": "pnpm --filter=@doain/node run build",
+    "app": "pnpm --filter=@doain/app run dev",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
     "prettier": "prettier --write ./packages/**/*.{js,ts,tsx,css,scss,vue}"
   },
