--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "allowJs": true,
     "baseUrl": ".",
-    "target": "ES2015",
+    "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "esnext",
     "moduleResolution": "node",
@@ -15,6 +15,6 @@
     "lib": ["esnext", "dom"],
     "skipLibCheck": true,
   },
-  "include": ["./*.ts", "packages/**/*.ts"],
+  "include": ["./*.ts", "packages/**/*.ts", "packages/playground/modules/index.vue"],
   "exclude": ["node_modules"]
 }
