--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -2,6 +2,7 @@
   "name": "@doain/client",
   "version": "0.0.1",
   "main": "src/index.ts",
+  "type": "module",
   "dependencies": {
     "@charrue/layout-next": "^1.0.1",
     "@charrue/schema-form-next": "^1.0.0",
@@ -17,14 +18,18 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@charrue/toolkit": "^0.13.1",
     "@charrue/vitest-service": "^0.0.2",
-    "@doain/shared": "workspace:*",
     "@types/element-resize-detector": "^1.1.3",
     "@types/qs": "^6.9.7",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue-jsx": "^2.1.1",
     "jsdom": "^20.0.3",
-    "vitest": "^0.26.3"
+    "vite": "^4.0.3"
   },
   "scripts": {
-    "test": "vitest"
+    "test": "vitest",
+    "dev": "vite build",
+    "build": "vite build"
   }
 }
