--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -2,6 +2,7 @@
   "name": "playground",
   "version": "0.0.1",
   "type": "module",
+  "private": true,
   "devDependencies": {
     "@doain/node": "workspace:*",
     "@doain/client": "workspace:*"
