feat: 可根据配置使用不同类型的路由

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -2,9 +2,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "types": [
-    ]
+    "types": []
   },
-  "include": ["./src/**/*.ts", "./src/**/*.d.ts", "./src/**/*.tsx", "./src/**/*.vue"],
+  "include": ["./src/**/*.ts", "./src/**/*.d.ts", "./src/**/*.tsx", "./src/**/*.vue", "./*.ts", "./*.d.ts", "./app/*.ts"],
   "exclude": ["node_modules"]
 }
