--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,6 +22,9 @@
     "@charrue/vitest-service": "^0.0.2",
     "@types/element-resize-detector": "^1.1.3",
     "@types/qs": "^6.9.7",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue-jsx": "^2.1.1",
+    "fast-glob": "^3.2.12",
     "jsdom": "^20.0.3",
     "vite": "^4.0.3"
   },
