feat: 重构client，移除src，并导出toolkit模块

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -2,8 +2,31 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "paths": {
+      "~toolkit": [
+        "./toolkit/index.ts",
+      ],
+      "~components": [
+        "./components/index.ts",
+      ],
+    },
     "types": []
   },
-  "include": ["./src/**/*.ts", "./src/**/*.d.ts", "./src/**/*.tsx", "./src/**/*.vue", "./*.ts", "./*.d.ts", "./app/*.ts"],
+  "include": [
+    "./src/**/*.ts",
+    "./src/**/*.d.ts",
+    "./src/**/*.tsx",
+    "./src/**/*.vue",
+    "./*.ts",
+    "./*.d.ts",
+    "./app/*.ts",
+    "./app/**/*.ts",
+    "./toolkit/**/*.ts",
+    "./toolkit/*.ts",
+    "./components/*.ts",
+    "./components/*.tsx",
+    "./components/**/*.ts",
+    "./components/**/*.tsx"
+  ],
   "exclude": ["node_modules"]
 }
