--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,7 +1,12 @@
 {
   "name": "@doain/client",
   "version": "0.0.2",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "type": "module",
   "dependencies": {
     "@charrue/layout-next": "^1.0.1",
@@ -26,7 +31,8 @@
     "@vitejs/plugin-vue-jsx": "^2.1.1",
     "fast-glob": "^3.2.12",
     "jsdom": "^20.0.3",
-    "vite": "^4.0.3"
+    "vite": "^4.0.3",
+    "vite-plugin-dts": "^1.7.1"
   },
   "scripts": {
     "test": "vitest",
