--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -3,6 +3,11 @@
   "version": "0.0.2",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "bin",
+    "README.md"
+  ],
   "type": "module",
   "dependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
