--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -27,6 +27,7 @@
     "@charrue/vitest-service": "^0.0.2",
     "@types/element-resize-detector": "^1.1.3",
     "@types/qs": "^6.9.7",
+    "@unocss/reset": "^0.47.6",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^2.1.1",
     "fast-glob": "^3.2.12",
