--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -32,6 +32,7 @@
     "@vitejs/plugin-vue-jsx": "^2.1.1",
     "fast-glob": "^3.2.12",
     "jsdom": "^20.0.3",
+    "sass": "^1.57.1",
     "vite": "^4.0.3",
     "vite-plugin-dts": "^1.7.1"
   },
