feat: provide more configurable items for the output of index.html

--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -30,9 +30,11 @@
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
+    "@types/escape-html": "^1.0.2",
     "@types/fs-extra": "^9.0.13",
     "@types/minimist": "^1.2.2",
     "@unocss/vite": "^0.48.3",
+    "escape-html": "^1.0.3",
     "rollup": "^3.9.1",
     "type-fest": "^3.5.1"
   },
