--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "dev": "doain",
-    "build": "doain build"
+    "build": "doain build",
+    "preview": "doain preview"
   }
 }
