fix(doain): fix a problem with doain command not working

--- a/packages/doain/package.json
+++ b/packages/doain/package.json
@@ -8,6 +8,9 @@
     "element-plus",
     "vue3"
   ],
+  "bin": {
+    "doain": "bin/doain.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ckangwen/doain",
