--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "lib": ["esnext", "dom"],
     "skipLibCheck": true,
   },
-  "include": ["./*.ts", "packages/**/*.ts", "packages/playground/modules/index.vue"],
+  "include": ["./*.ts", "packages/**/*.ts"],
   "exclude": ["node_modules"]
 }
