feat(client): add `global.d.ts`

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -20,7 +20,9 @@
   "types": "dist/index.d.ts",
   "files": [
     "dist",
-    "README.md"
+    "README.md",
+    "typings/index.d.ts",
+    "global.d.ts"
   ],
   "scripts": {
     "build": "vite build",
