--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -2,6 +2,9 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "types": [
+      "doain/global"
+    ]
   },
   "include": ["./src/**/*.ts", "./src/**/*.d.ts", "./src/**/*.tsx", "./src/**/*.vue", "./*.ts", ".doain/*.ts"],
   "exclude": ["node_modules"]
