--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@doain/client",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "doain客户端,主要提供项目入口,工具函数以及内部组件",
   "keywords": [
     "doain",
@@ -12,6 +12,17 @@
     "type": "git",
     "url": "git+https://github.com/ckangwen/doain",
     "directory": "packages/client"
+  },
+  "exports": {
+    ".": {
+      "types": "./index.d.ts",
+      "require": "./index.js",
+      "import": "./index.js"
+    },
+    "./*": "./*",
+    "./global": {
+      "types": "./global.d.ts"
+    }
   },
   "license": "MIT",
   "author": "ckangwen",
