--- a/packages/doain/package.json
+++ b/packages/doain/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doain",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "类Vitepress架构的后台管理系统的框架,将琐碎的配置与工具函数封装与内部",
   "keywords": [
     "doain",
@@ -27,6 +27,9 @@
       "types": "./config.d.ts",
       "require": "./config.cjs",
       "import": "./config.js"
+    },
+    "./global": {
+      "types": "./global.d.ts"
     }
   },
   "main": "index.js",
