--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@doain/node",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "doain的Node端,主要提供运行命令",
   "keywords": [
     "doain",
@@ -18,6 +18,17 @@
   "type": "module",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./index.d.ts",
+      "require": "./index.js",
+      "import": "./index.js"
+    },
+    "./*": "./*",
+    "./global": {
+      "types": "./global.d.ts"
+    }
+  },
   "files": [
     "dist",
     "bin",
