--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -59,16 +59,20 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^2.1.1",
     "compression": "^1.7.4",
-    "debug": "^4.3.4",
+    "es-module-lexer": "^1.1.1",
+    "fast-glob": "^3.2.12",
+    "magic-string": "^0.27.0",
     "minimist": "^1.2.7",
     "picocolors": "^1.0.0",
     "polka": "1.0.0-next.22",
+    "rollup-plugin-external-globals": "^0.7.1",
     "rollup-plugin-visualizer": "^5.9.0",
     "sirv": "^2.0.2",
     "unocss": "^0.48.3",
     "unplugin-auto-import": "^0.11.4",
     "unplugin-vue-components": "^0.22.9",
     "vite": "^4.0.3",
+    "@charrue/node-toolkit": "^0.4.0",
     "vite-plugin-inspect": "^0.7.8"
   },
   "devDependencies": {
