feat(toolkit): add `PaginationView`

--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -24,12 +24,15 @@
   "scripts": {
     "build": "tsup",
     "build:style": "gulp --gulpfile ./scripts/build-style.js",
-    "dev": "tsup --watch && npm run dev:style",
+    "dev": "tsup --watch & npm run dev:style",
     "dev:style": "gulp --gulpfile ./scripts/build-style.js --watch",
     "test": "vitest"
   },
   "dependencies": {
+    "@charrue/schema-form-next": "^1.0.1",
+    "@charrue/schema-table-next": "^1.0.3",
     "@element-plus/icons-vue": "^2.0.10",
+    "@vueuse/core": "^9.6.0",
     "axios": "^0.26.1",
     "element-plus": "^2.1.11",
     "js-cookie": "^3.0.1",
@@ -44,6 +47,7 @@
     "@charrue/toolkit": "^0.14.1",
     "@types/js-cookie": "^3.0.2",
     "@types/qs": "^6.9.7",
+    "@vue/test-utils": "^2.3.0",
     "browserslist": "^4.21.5",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
@@ -51,7 +55,9 @@
     "gulp-cssmin": "^0.2.0",
     "gulp-sass": "^5.1.0",
     "jsdom": "^20.0.3",
-    "sass": "^1.57.1"
+    "msw": "^1.0.1",
+    "sass": "^1.57.1",
+    "vite": "^4.0.3"
   },
   "publishConfig": {
     "access": "public",
